--- a/MosMedCT.ipynb
+++ b/MosMedCT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,33 @@
     "\n",
     "from tensorflow import keras\n",
     "from keras import layers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download dataset\n",
+    "\n",
+    "folder_path = r'D:\\dataset\\MosMedData'\n",
+    "\n",
+    "url = \"https://github.com/hasibzunair/3D-image-classification-tutorial/releases/download/v0.2/CT-0.zip\"\n",
+    "filename = os.path.join(os.getcwd(), \"CT-0.zip\")\n",
+    "keras.utils.get_file(filename, url)\n",
+    "\n",
+    "url = \"https://github.com/hasibzunair/3D-image-classification-tutorial/releases/download/v0.2/CT-23.zip\"\n",
+    "filename = os.path.join(os.getcwd(), \"CT-23.zip\")\n",
+    "keras.utils.get_file(filename, url)\n",
+    "\n",
+    "os.makedirs(folder_path)\n",
+    "\n",
+    "with zipfile.ZipFile(\"CT-0.zip\", \"r\") as z_fp:\n",
+    "    z_fp.extractall(folder_path)\n",
+    "\n",
+    "with zipfile.ZipFile(\"CT-23.zip\", \"r\") as z_fp:\n",
+    "    z_fp.extractall(folder_path)"
    ]
   },
   {
@@ -463,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('machine_learning')",
+   "display_name": "Python 3.8.13 ('machine_learning')",
    "language": "python",
    "name": "python3"
   },
@@ -477,12 +504,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e9eb5566e3876a77990f26ac0252fa1cfe23aa001b13dc9a42853692241bc400"
+    "hash": "7df4f41cefc5cd0156c097e2e686239a0fdeeb26c7851928ebba1c10941de066"
    }
   }
  },
